2025-01-09T00:49:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12681737771 # 535
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 433 823 / 436 826
* notice: next accum: outdated-unq outdated-all / unq all: 433 823 / 437 827
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-08]

2025-01-08T00:49:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12661915350 # 534
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 433 823 / 435 825
* notice: next accum: outdated-unq outdated-all / unq all: 433 823 / 436 826
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-07]

2025-01-02T00:48:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12575927702 # 528
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-02
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 433 823 / 434 824
* notice: next accum: outdated-unq outdated-all / unq all: 433 823 / 435 825
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-01]

2024-12-30T00:51:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12540155772 # 525