@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-09T00:49:15Z",
-  "count_outdated" : 823,
-  "uniques_outdated" : 433,
+  "timestamp" : "2025-01-12T00:54:31Z",
+  "count_outdated" : 824,
+  "uniques_outdated" : 434,
   "count" : 827,
   "uniques" : 437,
   "clones" : [
-    {
-      "timestamp": "2024-12-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-01T00:00:00Z",
       "count": 1,
