@@ -1,12 +1,7 @@
 {
-  "count": 4,
+  "count": 3,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-12-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-01T00:00:00Z",
       "count": 1,
