@@ -1,3 +1,12 @@
+2025-01-12T00:54:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12729042297 # 538
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-12
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 433 823 / 437 827
+* notice: next accum: outdated-unq outdated-all / unq all: 434 824 / 437 827
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-29] / []
+
 2025-01-09T00:49:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12681737771 # 535
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
